# xiao-ble-embassy

./: Cargo.toml  LICENSE  README.md
.zed/: settings.json
crates/01-blinky/: Cargo.toml
crates/01-blinky/src/: main.rs
crates/02-digital-input/: Cargo.toml
crates/02-digital-input-async/: Cargo.toml
crates/02-digital-input-async/src/: main.rs
crates/02-digital-input/src/: main.rs
crates/03-digital-input-async-multitask/: Cargo.toml
crates/03-digital-input-async-multitask/src/: main.rs
