[package]
name = "digital-input"
edition.workspace = true
license.workspace = true
version.workspace = true
publish.workspace = true
build = "../../build.rs"

[dependencies]
embassy-executor.workspace = true
embassy-time.workspace = true
embassy-nrf.workspace = true

defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true

cortex-m.workspace = true
cortex-m-rt.workspace = true
